small links corrections, pages completed

--- a/index.html
+++ b/index.html
@@ -103,21 +103,27 @@
         <div class="recipes">
             <h2>Explore our recipes and reach your goal!</h2>
         </div>
-        <div class="cat1">
-            <div class="maincat">
-              <a href="./pages/recipes-lowcalories.html"><img src="./img/lowcalories.png" alt="Low calories"></a>
+        <a class="cat1" href="./pages/recipes-lowcalories.html">
+            <div>
+                <div class="maincat">
+                    <img src="./img/lowcalories.png" alt="Low calories">
+                </div>
             </div>
-        </div>
-        <div class="cat2">
-            <div class="maincat">
-               <a href="./pages/recipes-highprotein.html"><img src="./img/highprotein.png" alt="High protein"></a>
+        </a>
+        <a class="cat2" href="./pages/recipes-highprotein.html">
+            <div>
+                <div class="maincat">
+                    <img src="./img/highprotein.png" alt="High protein">
+                </div>
             </div>
-        </div>
-        <div class="cat3">
-            <div class="maincat">
-              <a href="./pages/recipes-lowfat.html"><img src="./img/lowfat.png" alt="Low fat"></a>
+        </a>
+        <a class="cat3" href="./pages/recipes-lowfat.html">
+            <div>
+                <div class="maincat">
+                    <img src="./img/lowfat.png" alt="Low fat">
+                </div>
             </div>
-        </div>
+        </a>
         <div class="newsletter">
             <form id="newsletter">
                 <div class="containernews1">
