--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -136,7 +136,7 @@
             <ul class="resultList">
                 <li>If you need to loss some weight, you should consume less than <span class="resultCal">----</span> calories per day.</li> 
                 <li>If you want to mantein your weight you should consume <span class="resultCal">----</span> calories per day.</li>
-                <li>you need to gain some weight, you will need to consume more than <span class="resultCal">----</span> calories.</li>
+                <li>If you need to gain some weight, you will need to consume more than <span class="resultCal">----</span> calories.</li>
             </ul>
             <p>*Consult with a doctor if you are elegible for a calorie deficit programm.</p>
         </section>
@@ -144,7 +144,7 @@
         <!--faqs questions-->
 
         <h3 class="faqs">F.A.Q.</h3>
-        <div class="accordion m-5" id="accordionExample">
+        <div class="accordion m-5 bg-light p-3" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
