--- a/pages/recipes-lowfat.html
+++ b/pages/recipes-lowfat.html
@@ -135,16 +135,20 @@
         </section>
         <h4 class="check__also">Check also</h4>
         <section class="other__categories">
-            <div class="cat2 landing__recipes">
-                <div class="maincat">
-                   <a href="./recipes-highprotein.html"><img src="../img/highprotein.png" alt="High protein"></a>
+            <a href="./recipes-highprotein.html">
+                <div class="cat2 landing__recipes">
+                    <div class="maincat">
+                        <img src="../img/highprotein.png" alt="High protein">
+                    </div>
                 </div>
-            </div>
-            <div class="cat1 landing__recipes">
-                <div class="maincat">
-                  <a href="./recipes-lowcalories.html"><img src="../img/lowcalories.png" alt="Low calories"></a>
+            </a>
+            <a href="./recipes-lowcalories.html">
+                <div class="cat1 landing__recipes">
+                    <div class="maincat">
+                        <img src="../img/lowcalories.png" alt="Low calories">
+                    </div>
                 </div>
-            </div>
+            </a>
         </section>
     </main>
     <footer class="footer">
