--- a/pages/shop.html
+++ b/pages/shop.html
@@ -62,19 +62,19 @@
     </header>
     
     <main class="main__shop">
-        <a class="shakers__banner" href="./shop-shakers.html">
+        <a class="shakers__banner" href="#">
             <div>
-                <h2 class="title__shop">shakers</h2>
+                <h2 class="title__shop p-2">shakers</h2>
             </div>
         </a>
-        <a  class="whey__banner" href="./shop-whey-protein.html">
+        <a  class="whey__banner" href="#">
             <div>
-                <h2 class="title__shop">whey protein</h2>
+                <h2 class="title__shop p-2">whey protein</h2>
             </div>
         </a>
-        <a  class="scales__banner" href="./shop-scales.html">
+        <a  class="scales__banner" href="#">
             <div>
-                <h2 class="title__shop">BMI scales</h2>
+                <h2 class="title__shop p-2">BMI scales</h2>
             </div>
         </a>
     </main>
