--- a/pages/caloriedeficit.html
+++ b/pages/caloriedeficit.html
@@ -63,7 +63,7 @@
     <main class="mainCD">
         <div class="info">
             <h1 class="text-dark">What is a calorie deficit?</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis earum minima obcaecati reprehenderit laborum expedita eum. Rerum velit distinctio mollitia commodi ad corrupti ipsa minima accusantium dolorum tempora, numquam nulla nesciunt perferendis aliquam ratione, quos hic maiores autem voluptatum sunt incidunt a molestiae nostrum officiis? Porro odit inventore consequatur iure dolores consectetur magni dicta eius numquam illum ad tempore excepturi ipsa unde quaerat necessitatibus temporibus eos natus itaque, totam pariatur modi? Molestias optio vel numquam debitis eaque, similique quasi. Nostrum molestias cumque consequatur pariatur? Provident eligendi, vitae doloremque quisquam minus facere tempora ex ipsum impedit architecto deserunt magni voluptas possimus.</p>
+            <p class="text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis earum minima obcaecati reprehenderit laborum expedita eum. Rerum velit distinctio mollitia commodi ad corrupti ipsa minima accusantium dolorum tempora, numquam nulla nesciunt perferendis aliquam ratione, quos hic maiores autem voluptatum sunt incidunt a molestiae nostrum officiis? Porro odit inventore consequatur iure dolores consectetur magni dicta eius numquam illum ad tempore excepturi ipsa unde quaerat necessitatibus temporibus eos natus itaque, totam pariatur modi? Molestias optio vel numquam debitis eaque, similique quasi. Nostrum molestias cumque consequatur pariatur? Provident eligendi, vitae doloremque quisquam minus facere tempora ex ipsum impedit architecto deserunt magni voluptas possimus.</p>
             <img src="../img/caloriedeficit-info.jpeg" alt="Imagen">
         </div>
         <aside class="calculator">
@@ -132,21 +132,27 @@
         <div class="recipes2">
             <h2>Explore our recipes and reach your goal!</h2>
         </div>
-        <div class="cat1">
-            <div class="maincat">
-              <a href="./recipes-lowcalories.html"><img src="../img/lowcalories.png" alt="Low calories"></a>
+        <a class="cat1" href="./recipes-lowcalories.html">
+            <div>
+                <div class="maincat">
+                    <img src="../img/lowcalories.png" alt="Low calories">
+                </div>
             </div>
-        </div>
-        <div class="cat2">
-            <div class="maincat">
-               <a href="./recipes-highprotein.html"><img src="../img/highprotein.png" alt="High protein"></a>
+        </a>
+        <a class="cat2" href="./recipes-highprotein.html">
+            <div>
+                <div class="maincat">
+                    <img src="../img/highprotein.png" alt="High protein">
+                </div>
             </div>
-        </div>
-        <div class="cat3">
-            <div class="maincat">
-              <a href="./recipes-lowfat.html"><img src="../img/lowfat.png" alt="Low fat"></a>
+        </a>
+        <a class="cat3" href="./recipes-lowfat.html">
+            <div>
+                <div class="maincat">
+                    <img src="../img/lowfat.png" alt="Low fat">
+                </div>
             </div>
-        </div>
+        </a>
     </main>
     <footer class="footer">
         <!--Social media icons-->
