last mobile adaptation and code cleanup

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
                 </div>
             </div>
         </a>
+        <!--newsletter-->
         <div class="newsletter">
             <form id="newsletter">
                 <div class="containernews1">
