--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -130,6 +130,7 @@
             </form>
             <button class="calcCD" type="submit">CALCULATE</button>
         </div>
+        <!--results - falta hacer funcional el formulario y que los resultados se vean reflejados en los espacios correspondientes-->
         <section class="result">
             <h2>Your result is</h2>
             <h3><span class="resultCal">----</span> calories per day</h3>
@@ -144,7 +145,7 @@
         <!--faqs questions-->
 
         <h3 class="faqs">F.A.Q.</h3>
-        <div class="accordion m-5 bg-light p-3" id="accordionExample">
+        <div class="accordion m-lg-5 m-md-3 m-sm-1 bg-light p-3" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
