--- a/pages/recipes-lowfat.html
+++ b/pages/recipes-lowfat.html
@@ -71,6 +71,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat delectus, harum vero suscipit illo quis hic ipsum eaque amet aspernatur nulla tenetur cumque, eveniet error reprehenderit rerum, quam iusto quos! Accusamus quaerat eos nobis vel praesentium itaque quasi, ipsum vero atque voluptatibus rem similique, soluta molestias, minima nostrum architecto nesciunt!
             </div>
         </section>
+        <!--recipes. Falta generar landings para cada receta, ahora no estan linkeadas a nada-->
         <section class="recipes__cards__lowcalories">
             <div class="card card1" style="width: 18rem;">
                 <img src="../img/pumpkin_pie.jpeg" class="card-img-top" alt="recipe">
@@ -133,6 +134,7 @@
                 </div>
               </div>
         </section>
+                <!--categories-->
         <h4 class="check__also">Check also</h4>
         <section class="other__categories">
             <a href="./recipes-highprotein.html">
