--- a/pages/shop.html
+++ b/pages/shop.html
@@ -60,7 +60,7 @@
               </nav>
         </nav>
     </header>
-    
+    <!--shop - categories. Falta crear landing para cada categoria + landing de cada producto. No estan linkeadas a nada ahora-->
     <main class="main__shop">
         <a class="shakers__banner" href="#">
             <div>
