--- a/pages/caloriedeficit.html
+++ b/pages/caloriedeficit.html
@@ -66,6 +66,7 @@
             <p class="text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis earum minima obcaecati reprehenderit laborum expedita eum. Rerum velit distinctio mollitia commodi ad corrupti ipsa minima accusantium dolorum tempora, numquam nulla nesciunt perferendis aliquam ratione, quos hic maiores autem voluptatum sunt incidunt a molestiae nostrum officiis? Porro odit inventore consequatur iure dolores consectetur magni dicta eius numquam illum ad tempore excepturi ipsa unde quaerat necessitatibus temporibus eos natus itaque, totam pariatur modi? Molestias optio vel numquam debitis eaque, similique quasi. Nostrum molestias cumque consequatur pariatur? Provident eligendi, vitae doloremque quisquam minus facere tempora ex ipsum impedit architecto deserunt magni voluptas possimus.</p>
             <img src="../img/caloriedeficit-info.jpeg" alt="Imagen">
         </div>
+        <!--calculator-->
         <aside class="calculator">
             <h4>Calculate your own 
                 <br>
@@ -129,6 +130,7 @@
             </form>
             <button class="calcCD" type="submit">CALCULATE</button>
         </aside>
+        <!--categories - recipes-->
         <div class="recipes2">
             <h2>Explore our recipes and reach your goal!</h2>
         </div>
