all pages created

--- a/pages/recipes-highprotein-marbled-pudding.html
+++ b/pages/recipes-highprotein-marbled-pudding.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop | Calorie Deficit</title>
+    <title>Recipes | Calorie Deficit</title>
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -60,25 +60,71 @@
               </nav>
         </nav>
     </header>
-    <!--shop - categories. Falta crear landing para cada categoria + landing de cada producto. No estan linkeadas a nada ahora-->
-    <main class="main__shop">
-        <a class="shakers__banner" href="./shop-shakers.html">
-            <div>
-                <h2 class="title__shop p-2">shakers</h2>
+    <main class="mainRecipes">
+        <div class="recipe__main__container">
+            <div class="recipe__picture">
+                <img src="../img/marbled-pudding.png" alt="marbled-pudding">
+                <h3>high protein recipe</h3>
             </div>
-        </a>
-        <a  class="whey__banner" href="./shop-whey-protein.html">
-            <div>
-                <h2 class="title__shop p-2">whey protein</h2>
+            <div class="recipe__title">
+                <h2>Marbled pudding</h2>
+                <h4>92 calories per serving</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, nisi deserunt sequi ea quod vitae necessitatibus similique illo voluptatum tempore excepturi fuga, mollitia sint aspernatur voluptatem, numquam dolorum. Id, quas.</p>
+                <div class="recipe__title__macros">
+                    <div class="recipe__protein"> 10,2g protein</div>
+                    <div class="recipe__carbs">5,7g carbs</div>
+                    <div class="recipe__fats">9,3g fats</div>
+                </div>
+                <a href="./nutritionalinfo.html">Learn more about macros</a>
             </div>
-        </a>
-        <a  class="scales__banner" href="./shop-bmi-scales.html">
-            <div>
-                <h2 class="title__shop p-2">BMI scales</h2>
+        </div>
+        <div class="recipe__primary__container">
+            <div class="ingredients">
+                <h4>Ingredients</h4>
+                <ul>
+                    <li>10ml vanilla essence</li>
+                    <li>2 eggs</li>
+                    <li>35g <span><a href="./shop-whey-protein.html">vanilla whey protein</a></span></li>
+                    <li>35g <span><a href="">whey protein - no flavour</a></span></li>
+                    <li>40g corconut flour</li>
+                    <li>50g natural sweetner</li>
+                    <li>810g cacao powder/li>
+                    <li>1 tsp baking soda</li>
+                    <li>10g baking podwer</li>
+                    <li></li>
+                </ul>
+                <p>servings: 8</p>
             </div>
-        </a>
-    </main>
+            <div class="steps">
+                <h4>Steps</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ratione dolorum magni voluptatum officiis dolorem molestiae? Perferendis, molestiae? Quidem quas maiores eaque neque optio, officiis saepe quos recusandae modi, eum consectetur aut aliquam fugiat, iure nostrum aspernatur distinctio temporibus non sequi voluptatem nam suscipit aliquid quod? Aperiam natus omnis perspiciatis.</p>
+                <div class="shop-ingredient">
+                    <a href="./shop-whey-protein.html">SHOP WHEY PROTEIN</a>
+                </div>
+            </div>
+        </div>
+        <div class="recipe__secondary__container">
+          <a href="./recipes-highprotein.html">Chech all high protein recipes</a>
+        </div>
+        <div class="recipe__third__container">
+            <div>
+                <h2>You may also like...</h2>
+            </div>
+            <div class="recipe__options">
+                <div class="recipe__option__1">
+                    <img src="../img/protein cookies.png" alt="protein-cookies">
+                    <a href="./recipes-highprotein-protein_cookies.html">Protein cookies</a>
+                </div>
+                <div class="recipe__option__2">
+                    <img src="../img/Green pie.png" alt="green-pie">
+                    <a href="./recipes-highprotein-green-pie.html">Green pie</a> 
+                </div>
+            </div>
+        </div>
 
+
+        
+    </main>
     <footer class="footer">
         <!--Social media icons-->
         <h5>Follow us</h5>
