--- a/pages/recipes-highprotein.html
+++ b/pages/recipes-highprotein.html
@@ -74,63 +74,63 @@
          <!--recipes. Falta generar landings para cada receta, ahora no estan linkeadas a nada-->
         <section class="recipes__cards__lowcalories">
             <div class="card card1" style="width: 18rem;">
-                <img src="../img/pumpkin_pie.jpeg" class="card-img-top" alt="recipe">
+                <img src="../img/protein cookies.png" class="card-img-top" alt="protein-cookies">
                 <div class="card-body">
-                  <h5 class="card-title recipe-title">Recipe name</h5>
-                  <p class="card-text">Quatity of calories</p>
+                  <h5 class="card-title recipe-title">Protein cookies</h5>
+                  <p class="card-text">153 calories</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item protein__colour">Xgr protein</li>
-                  <li class="list-group-item carbs__colour">Xgr carbs</li>
-                  <li class="list-group-item fats__colour">Xgr fats</li>
+                  <li class="list-group-item protein__colour">10,2g protein</li>
+                  <li class="list-group-item carbs__colour">5,7g carbs</li>
+                  <li class="list-group-item fats__colour">9,3g fats</li>
                 </ul>
                 <div class="card-body">
-                  <a href="#" class="card-link">Go to recipe</a>
+                  <a href="./recipes-highprotein-protein_cookies.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
               <div class="card card2" style="width: 18rem;">
-                <img src="../img/pumpkin_pie.jpeg" class="card-img-top" alt="recipe">
+                <img src="../img/spanish-potatoe-tortilla.png" class="card-img-top" alt="spanish-tortilla">
                 <div class="card-body">
-                  <h5 class="card-title recipe-title">Recipe name</h5>
-                  <p class="card-text">Quatity of calories</p>
+                  <h5 class="card-title recipe-title">Spanish tortilla</h5>
+                  <p class="card-text">400 calories</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item protein__colour">Xgr protein</li>
-                  <li class="list-group-item carbs__colour">Xgr carbs</li>
-                  <li class="list-group-item fats__colour">Xgr fats</li>
+                  <li class="list-group-item protein__colour">21,6g protein</li>
+                  <li class="list-group-item carbs__colour">70,2g carbs</li>
+                  <li class="list-group-item fats__colour">6,5g fats</li>
                 </ul>
                 <div class="card-body">
-                  <a href="#" class="card-link">Go to recipe</a>
+                  <a href="./recipes-highprotein-spanish-tortilla.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
               <div class="card card3" style="width: 18rem;">
-                <img src="../img/pumpkin_pie.jpeg" class="card-img-top" alt="recipe">
+                <img src="../img/Green pie.png" class="card-img-top" alt="green-pie">
                 <div class="card-body">
-                  <h5 class="card-title recipe-title">Recipe name</h5>
-                  <p class="card-text">Quatity of calories</p>
+                  <h5 class="card-title recipe-title">Green pie</h5>
+                  <p class="card-text">429 calories</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item protein__colour">Xgr protein</li>
-                  <li class="list-group-item carbs__colour">Xgr carbs</li>
-                  <li class="list-group-item fats__colour">Xgr fats</li>
+                  <li class="list-group-item protein__colour">21,6g protein</li>
+                  <li class="list-group-item carbs__colour">70,2g carbs</li>
+                  <li class="list-group-item fats__colour">6,5g fats</li>
                 </ul>
                 <div class="card-body">
-                  <a href="#" class="card-link">Go to recipe</a>
+                  <a href="./recipes-highprotein-green-pie.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
               <div class="card card4" style="width: 18rem;">
-                <img src="../img/pumpkin_pie.jpeg" class="card-img-top" alt="recipe">
+                <img src="../img/marbled-pudding.png" class="card-img-top" alt="marbled-pudding">
                 <div class="card-body">
-                  <h5 class="card-title recipe-title">Recipe name</h5>
-                  <p class="card-text">Quatity of calories</p>
+                  <h5 class="card-title recipe-title">Marbled pudding</h5>
+                  <p class="card-text">92 calories</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item protein__colour">Xgr protein</li>
-                  <li class="list-group-item carbs__colour">Xgr carbs</li>
-                  <li class="list-group-item fats__colour">Xgr fats</li>
+                  <li class="list-group-item protein__colour">10,2g protein</li>
+                  <li class="list-group-item carbs__colour">5,7g carbs</li>
+                  <li class="list-group-item fats__colour">9,3g fats</li>
                 </ul>
                 <div class="card-body">
-                  <a href="#" class="card-link">Go to recipe</a>
+                  <a href="./recipes-highprotein-marbled-pudding.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
         </section>
