--- a/pages/recipes-lowcalories.html
+++ b/pages/recipes-lowcalories.html
@@ -74,63 +74,63 @@
         <!--recipes. Falta generar landings para cada receta, ahora no estan linkeadas a nada-->
         <section class="recipes__cards__lowcalories">
             <div class="card card1" style="width: 18rem;">
-                <img src="../img/pumpkin_pie.jpeg" class="card-img-top" alt="recipe">
+                <img src="../img/vegetable_soup.jpeg" class="card-img-top" alt="vegetable_soup">
                 <div class="card-body">
                   <h5 class="card-title recipe-title">Vegetable soup</h5>
-                  <p class="card-text">Quatity of calories</p>
+                  <p class="card-text">105 calories</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item protein__colour">Xgr protein</li>
-                  <li class="list-group-item carbs__colour">Xgr carbs</li>
-                  <li class="list-group-item fats__colour">Xgr fats</li>
+                  <li class="list-group-item protein__colour">3,1g protein</li>
+                  <li class="list-group-item carbs__colour">21,8g carbs</li>
+                  <li class="list-group-item fats__colour">0,7g fats</li>
                 </ul>
                 <div class="card-body">
-                  <a href="./recipes-lowcalorie-vegetable_soup.html" class="card-link">Go to recipe</a>
+                  <a href="./recipes-lowcalories-vegetable_soup.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
               <div class="card card2" style="width: 18rem;">
-                <img src="../img/pumpkin_pie.jpeg" class="card-img-top" alt="recipe">
+                <img src="../img/quinoa-burger.png" class="card-img-top" alt="recipe">
                 <div class="card-body">
-                  <h5 class="card-title recipe-title">Recipe name</h5>
-                  <p class="card-text">Quatity of calories</p>
+                  <h5 class="card-title recipe-title">Quinoa burger</h5>
+                  <p class="card-text">92 calories</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item protein__colour">Xgr protein</li>
-                  <li class="list-group-item carbs__colour">Xgr carbs</li>
-                  <li class="list-group-item fats__colour">Xgr fats</li>
+                  <li class="list-group-item protein__colour">3,9g protein</li>
+                  <li class="list-group-item carbs__colour">13,7 carbs</li>
+                  <li class="list-group-item fats__colour">2g fats</li>
                 </ul>
                 <div class="card-body">
-                  <a href="#" class="card-link">Go to recipe</a>
+                  <a href="./recipes-lowcalories-quinoa_burger.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
               <div class="card card3" style="width: 18rem;">
-                <img src="../img/pumpkin_pie.jpeg" class="card-img-top" alt="recipe">
+                <img src="../img/eggplant_schnitzel.png" class="card-img-top" alt="recipe">
                 <div class="card-body">
-                  <h5 class="card-title recipe-title">Recipe name</h5>
-                  <p class="card-text">Quatity of calories</p>
+                  <h5 class="card-title recipe-title">Eggplant schnitzel</h5>
+                  <p class="card-text">58 calories</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item protein__colour">Xgr protein</li>
-                  <li class="list-group-item carbs__colour">Xgr carbs</li>
-                  <li class="list-group-item fats__colour">Xgr fats</li>
+                  <li class="list-group-item protein__colour">3,2g protein</li>
+                  <li class="list-group-item carbs__colour">7,8g carbs</li>
+                  <li class="list-group-item fats__colour">1,7g fats</li>
                 </ul>
                 <div class="card-body">
-                  <a href="#" class="card-link">Go to recipe</a>
+                  <a href="./recipes-lowcalories-eggplant_schnitzel.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
               <div class="card card4" style="width: 18rem;">
-                <img src="../img/pumpkin_pie.jpeg" class="card-img-top" alt="recipe">
+                <img src="../img/apple crumble.png" class="card-img-top" alt="recipe">
                 <div class="card-body">
-                  <h5 class="card-title recipe-title">Recipe name</h5>
-                  <p class="card-text">Quatity of calories</p>
+                  <h5 class="card-title recipe-title">Apple crumble</h5>
+                  <p class="card-text">93 calories</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item protein__colour">Xgr protein</li>
-                  <li class="list-group-item carbs__colour">Xgr carbs</li>
-                  <li class="list-group-item fats__colour">Xgr fats</li>
+                  <li class="list-group-item protein__colour">7,8g protein</li>
+                  <li class="list-group-item carbs__colour">9,6g carbs</li>
+                  <li class="list-group-item fats__colour">2g fats</li>
                 </ul>
                 <div class="card-body">
-                  <a href="#" class="card-link">Go to recipe</a>
+                  <a href="./recipes-lowcalories-apple_crumble.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
         </section>
