--- a/pages/recipes-lowfat-yoghurt-caramel-ice-cream.html
+++ b/pages/recipes-lowfat-yoghurt-caramel-ice-cream.html
@@ -60,8 +60,57 @@
               </nav>
         </nav>
     </header>
-    <main>
-        
+    <main class="mainRecipes">
+        <div class="recipe__main__container">
+            <div class="recipe__picture">
+                <img src="../img/yoghurt-caramel-ice-cream.png" alt="yoghurt-caramel-ice-cream">
+                <h3>low fat recipe</h3>
+            </div>
+            <div class="recipe__title">
+                <h2>Yoghurt & caramel ice-cream</h2>
+                <h4>64 calories per serving</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, nisi deserunt sequi ea quod vitae necessitatibus similique illo voluptatum tempore excepturi fuga, mollitia sint aspernatur voluptatem, numquam dolorum. Id, quas.</p>
+                <div class="recipe__title__macros">
+                    <div class="recipe__protein"> 7,8g protein</div>
+                    <div class="recipe__carbs">6g carbs</div>
+                    <div class="recipe__fats">0,9g fats</div>
+                </div>
+                <a href="./nutritionalinfo.html">Learn more about macros</a>
+            </div>
+        </div>
+        <div class="recipe__primary__container">
+            <div class="ingredients">
+                <h4>Ingredients</h4>
+                <ul>
+                    <li>150g protein yoghurt</li>
+                    <li>10g cacao powder</li>
+                    <li>15g caramel sauce</li>
+                    <li>5g <a href="./shop-whey-protein.html">no flavour whey protein</a></li>
+                </ul>
+                <p>servings: 3</p>
+            </div>
+            <div class="steps">
+                <h4>Steps</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ratione dolorum magni voluptatum officiis dolorem molestiae? Perferendis, molestiae? Quidem quas maiores eaque neque optio, officiis saepe quos recusandae modi, eum consectetur aut aliquam fugiat, iure nostrum aspernatur distinctio temporibus non sequi voluptatem nam suscipit aliquid quod? Aperiam natus omnis perspiciatis.</p>
+            </div>
+        </div>
+        <div class="recipe__secondary__container">
+            <a href="./recipes-lowfat.html">Chech all low fat recipes</a>
+        </div>
+        <div class="recipe__third__container">
+            <div>
+                <h2>You may also like...</h2>
+            </div>
+            <div class="recipe__options">
+                <div class="recipe__option__1">
+                    <img src="../img/spinach-burgers.png" alt="spinach-burgers">
+                    <a href="./recipes-lowfat-spinach-burgers">Spinach burgers</a> 
+                </div>
+                <div class="recipe__option__2">
+                    <img src="../img/whole-wheat-pancakes.png" alt="whole-wheat-pancakes">
+                    <a href="./recipes-lowfat-whole-wheat-pancakes.html">Whole wheat pancakes</a> 
+                </div>
+            </div>
     </main>
     <footer class="footer">
         <!--Social media icons-->
