--- a/pages/recipes-lowcalories-vegetable_soup.html
+++ b/pages/recipes-lowcalories-vegetable_soup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop | Calorie Deficit</title>
+    <title>Recipes | Calorie Deficit</title>
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -60,25 +60,60 @@
               </nav>
         </nav>
     </header>
-    <!--shop - categories. Falta crear landing para cada categoria + landing de cada producto. No estan linkeadas a nada ahora-->
-    <main class="main__shop">
-        <a class="shakers__banner" href="./shop-shakers.html">
-            <div>
-                <h2 class="title__shop p-2">shakers</h2>
+    <main class="mainRecipes">
+        <div class="recipe__main__container">
+            <div class="recipe__picture">
+                <img src="../img/vegetable_soup.jpeg" alt="vegetable_soup">
+                <h3>low calories recipe</h3>
             </div>
-        </a>
-        <a  class="whey__banner" href="./shop-whey-protein.html">
-            <div>
-                <h2 class="title__shop p-2">whey protein</h2>
+            <div class="recipe__title">
+                <h2>Vegetable soup</h2>
+                <h4>105 calories per serving</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, nisi deserunt sequi ea quod vitae necessitatibus similique illo voluptatum tempore excepturi fuga, mollitia sint aspernatur voluptatem, numquam dolorum. Id, quas.</p>
+                <div class="recipe__title__macros">
+                    <div class="recipe__protein"> 3,1g protein</div>
+                    <div class="recipe__carbs">21,8g carbs</div>
+                    <div class="recipe__fats">0,7g fats</div>
+                </div>
+                <a href="./nutritionalinfo.html">Learn more about macros</a>
             </div>
-        </a>
-        <a  class="scales__banner" href="./shop-bmi-scales.html">
-            <div>
-                <h2 class="title__shop p-2">BMI scales</h2>
+        </div>
+        <div class="recipe__primary__container">
+            <div class="ingredients">
+                <h4>Ingredients</h4>
+                <ul>
+                    <li>280g leek</li>
+                    <li>160g onion</li>
+                    <li>2,5 glove garlic</li>
+                    <li>150g carrots</li>
+                    <li>310g zuccini</li>
+                    <li>130g sweet potatoe</li>
+                </ul>
+                <p>servings: 4</p>
             </div>
-        </a>
+            <div class="steps">
+                <h4>Steps</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ratione dolorum magni voluptatum officiis dolorem molestiae? Perferendis, molestiae? Quidem quas maiores eaque neque optio, officiis saepe quos recusandae modi, eum consectetur aut aliquam fugiat, iure nostrum aspernatur distinctio temporibus non sequi voluptatem nam suscipit aliquid quod? Aperiam natus omnis perspiciatis.</p>
+            </div>
+        </div>
+        <div class="recipe__secondary__container">
+            <a href="./recipes-lowcalories.html">Chech all low calories recipes</a>
+        </div>
+        <div class="recipe__third__container">
+          <div>
+              <h2>You may also like...</h2>
+          </div>
+          <div class="recipe__options">
+              <div class="recipe__option__1">
+                  <img src="../img/quinoa-burger.png" alt="quinoa-burger">
+                  <a href="./recipes-lowcalories-quinoa_burger.html">Quinoa burger</a> 
+              </div>
+              <div class="recipe__option__2">
+                  <img src="../img/eggplant_schnitzel.png" alt="eggplant_schnitzel">
+                  <a href="./recipes-lowcalories-eggplant_schnitzel.html">Eggplant schnitzel</a> 
+              </div>
+          </div>
     </main>
-
     <footer class="footer">
         <!--Social media icons-->
         <h5>Follow us</h5>
