--- a/pages/recipes-lowfat.html
+++ b/pages/recipes-lowfat.html
@@ -74,63 +74,63 @@
         <!--recipes. Falta generar landings para cada receta, ahora no estan linkeadas a nada-->
         <section class="recipes__cards__lowcalories">
             <div class="card card1" style="width: 18rem;">
-                <img src="../img/pumpkin_pie.jpeg" class="card-img-top" alt="recipe">
+                <img src="../img/whole-wheat-pancakes.png" class="card-img-top" alt="whole-wheat-pancakes">
                 <div class="card-body">
-                  <h5 class="card-title recipe-title">Recipe name</h5>
-                  <p class="card-text">Quatity of calories</p>
+                  <h5 class="card-title recipe-title">Whole wheat pancakes</h5>
+                  <p class="card-text">74 calories</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item protein__colour">Xgr protein</li>
-                  <li class="list-group-item carbs__colour">Xgr carbs</li>
-                  <li class="list-group-item fats__colour">Xgr fats</li>
+                  <li class="list-group-item protein__colour">2,7g protein</li>
+                  <li class="list-group-item carbs__colour">13,3g carbs</li>
+                  <li class="list-group-item fats__colour">0,7g fats</li>
                 </ul>
                 <div class="card-body">
-                  <a href="#" class="card-link">Go to recipe</a>
+                  <a href="./recipes-lowfat-whole-wheat-pancakes.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
               <div class="card card2" style="width: 18rem;">
-                <img src="../img/pumpkin_pie.jpeg" class="card-img-top" alt="recipe">
+                <img src="../img/wholemeal-bread.png" class="card-img-top" alt="wholemeal-bread">
                 <div class="card-body">
-                  <h5 class="card-title recipe-title">Recipe name</h5>
-                  <p class="card-text">Quatity of calories</p>
+                  <h5 class="card-title recipe-title">Wholemeal bread</h5>
+                  <p class="card-text">127 calories</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item protein__colour">Xgr protein</li>
-                  <li class="list-group-item carbs__colour">Xgr carbs</li>
-                  <li class="list-group-item fats__colour">Xgr fats</li>
+                  <li class="list-group-item protein__colour">4,2g protein</li>
+                  <li class="list-group-item carbs__colour">24,1g carbs</li>
+                  <li class="list-group-item fats__colour">0,7g fats</li>
                 </ul>
                 <div class="card-body">
-                  <a href="#" class="card-link">Go to recipe</a>
+                  <a href="./recipes-lowfat-wholemeal-bread.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
               <div class="card card3" style="width: 18rem;">
-                <img src="../img/pumpkin_pie.jpeg" class="card-img-top" alt="recipe">
+                <img src="../img/yoghurt-caramel-ice-cream.png" class="card-img-top" alt="yoghurt-caramel-ice-cream">
                 <div class="card-body">
-                  <h5 class="card-title recipe-title">Recipe name</h5>
-                  <p class="card-text">Quatity of calories</p>
+                  <h5 class="card-title recipe-title">Yoghurt & caramel ice-cream</h5>
+                  <p class="card-text">64 calories</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item protein__colour">Xgr protein</li>
-                  <li class="list-group-item carbs__colour">Xgr carbs</li>
-                  <li class="list-group-item fats__colour">Xgr fats</li>
+                  <li class="list-group-item protein__colour">7,8g protein</li>
+                  <li class="list-group-item carbs__colour">6g carbs</li>
+                  <li class="list-group-item fats__colour">0,9g fats</li>
                 </ul>
                 <div class="card-body">
-                  <a href="#" class="card-link">Go to recipe</a>
+                  <a href="./recipes-lowfat-yoghurt-caramel-ice-cream.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
               <div class="card card4" style="width: 18rem;">
-                <img src="../img/pumpkin_pie.jpeg" class="card-img-top" alt="recipe">
+                <img src="../img/spinach-burgers.png" class="card-img-top" alt="spinach-burgers">
                 <div class="card-body">
-                  <h5 class="card-title recipe-title">Recipe name</h5>
-                  <p class="card-text">Quatity of calories</p>
+                  <h5 class="card-title recipe-title">Spinach burgers</h5>
+                  <p class="card-text">50 calories</p>
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item protein__colour">Xgr protein</li>
-                  <li class="list-group-item carbs__colour">Xgr carbs</li>
-                  <li class="list-group-item fats__colour">Xgr fats</li>
+                  <li class="list-group-item protein__colour">3,6g protein</li>
+                  <li class="list-group-item carbs__colour">5,8g carbs</li>
+                  <li class="list-group-item fats__colour">1,2g fats</li>
                 </ul>
                 <div class="card-body">
-                  <a href="#" class="card-link">Go to recipe</a>
+                  <a href="./recipes-lowfat-spinach-burgers.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
         </section>
